examples/test/testpolicy14347.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14347
  namespace: namespace353
spec:
  podSelector:
    matchLabels:
      key30: value19
      key35: value46
      key23: value12
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key0: value11
          key3: value40
      podSelector:
        matchLabels:
          key30: value7
          key14: value10
